Modify index.html and add style.css

--- a/index.html
+++ b/index.html
@@ -1,8 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <title>Rock Paper Scissors</title>
-        <script src="script.js"></script>
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="header">
+        Rock, Paper, Scissors!
+    </div>
+    <div class="center-display">
+        <div class="user-button-container">
+            <button type="button">Rock</button>
+            <button type="button">Paper</button>
+            <button type="button">Scissors</button>
+        </div>
+        <div class="computer-button-container">
+            <button type="button">Rock</button>
+            <button type="button">Paper</button>
+            <button type="button">Scissors</button>
+        </div>
+        <div class="current-score">
+            <p></p>
+        </div>
+    </div>
+    <div class="final-result">
+        <p></p>
+    </div>
+<script src="script.js"></script>
+</body>
 </html>
